# charybdis

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
assets/shaders/: jelly_fragment.glsl  phong_fragment.glsl  phong_vertex.glsl  strand_vertex.glsl  tentacle_fragment.glsl  tentacle_geometry.glsl  tentacle_vertex.glsl
charybdis-windows/: imgui.ini
charybdis-windows/assets/shaders/: background_fragment.glsl  background_vertex.glsl  fragment.glsl  strand_fragment.glsl  tentacle_fragment.glsl  tentacle_vertex.glsl  vertex.glsl
include/: camera.hpp  gui_manager.hpp  input_handler.hpp  jellyfish_mesh.hpp  mesh.hpp  orbit_camera.hpp  particle_system.hpp  shader.hpp  shader_utils.hpp
src/: camera.cpp  camera.h  main.cpp
src/camera/: orbit_camera.cpp
src/gui/: gui_manager.cpp
src/mesh/: jellyfish_mesh.cpp  mesh.cpp
src/shaders/: fragment.glsl  vertShade.vert  vertex.glsl
src/simulation/: particle_system.cpp
src/utils/: input_handler.cpp  shader_utils.cpp
